# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  RayTracing.sln
.github/workflows/: cmake-build.yml  release.yml
RayTracing/: RayTracing.vcxproj  RayTracing.vcxproj.filters  aarect.h  box.h  drand48.h  heart.h  image.ppm  main.cpp  material.h  onb.h  pdf.h  rotate.h  sphere.h  texture.h
RayTracing/Debug/: RayTracing.exe.recipe  vc142.idb
RayTracing/Debug/RayTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracing.lastbuildstate  RayTracing.write.1u.tlog
RayTracing/x64/Debug/: RayTracing.exe.recipe  RayTracing.ilk  vc142.idb
RayTracing/x64/Debug/RayTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracing.lastbuildstate  RayTracing.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/tracer/: tracer.h
include/tracer/accelerator/: bvh.h
include/tracer/core/: aabb.h  aarect.h  background.h  box.h  bvh.h  camera.h  constant_medium.h  heart.h  hittable.h  hittable_list.h  material.h  onb.h  pdf.h  ray.h  rotate.h  sphere.h  texture.h  translate.h  vec3.h
include/tracer/geometry/: aarect.h  box.h  heart.h  mesh.h  ocean.h  sphere.h  triangle.h
include/tracer/material/: cloth.h  dielectric.h  diffuse_light.h  glossy_plastic.h  isotropic.h  lambertian.h  metal.h  ocean_material.h  plastic.h  standard_material.h  sun_glow.h  water.h
include/tracer/math/: drand48.h  math.h  optics.h  sampling.h  vec2.h  vec3.h
include/tracer/obj_parser/: ast.h  factory.h  lexer.h  parser.h  token.h
include/tracer/parser/: ast.h  exceptions.h  factory.h  lexer.h  parser.h  token.h
include/tracer/physics/: fft_ocean.h  symplectic_ripple.h
include/tracer/texture/: image_texture.h  solid_color.h
include/tracer/transform/: rotate.h  translate.h
include/tracer/utils/: drand48.h  math.h  timer.h
include/tracer/volume/: constant_medium.h  medium.h  phase.h
models/cube/: cube.mtl
src/: CMakeLists.txt  aabb.h  camera.h  heart.h  hittable.h  hittable_list.h  main.cpp  pdf.h  ray.h  translate.h  vec.h
src/core/: aabb.cpp  aarect.cpp  box.cpp  bvh.cpp  camera.cpp  constant_medium.cpp  heart.cpp  hittable_list.cpp  material.cpp  onb.cpp  pdf.cpp  rotate.cpp  sphere.cpp  texture.cpp  translate.cpp  vec3.cpp
src/parser/: ast.cpp  factory.cpp  lexer.cpp  parser.cpp  token.cpp
src/tracer/accelerator/: bvh.cpp
src/tracer/core/: aabb.cpp  background.cpp  camera.cpp  hittable.cpp  hittable_list.cpp  material.cpp  onb.cpp  pdf.cpp  texture.cpp
src/tracer/geometry/: aarect.cpp  box.cpp  heart.cpp  mesh.cpp  ocean.cpp  sphere.cpp  triangle.cpp
src/tracer/material/: cloth.cpp  dielectric.cpp  diffuse_light.cpp  glossy_plastic.cpp  isotropic.cpp  lambertian.cpp  metal.cpp  ocean_material.cpp  plastic.cpp  standard_material.cpp  sun_glow.cpp  water.cpp
src/tracer/math/: optics.cpp  sampling.cpp  vec3.cpp
src/tracer/obj_parser/: ast.cpp  factory.cpp  lexer.cpp  parser.cpp  token.cpp
src/tracer/parser/: ast.cpp  factory.cpp  lexer.cpp  parser.cpp  token.cpp
src/tracer/physics/: fft_ocean.cpp
src/tracer/texture/: image_texture.cpp  solid_color.cpp
src/tracer/transform/: rotate.cpp  translate.cpp
src/tracer/volume/: constant_medium.cpp
tests/: CMakeLists.txt  test_cloth.cpp  test_cube.cpp  test_datsun_280z.cpp  test_dynamic_ocean.cpp  test_glass.cpp  test_glossy_plastic.cpp  test_heart.cpp  test_metal.cpp  test_obj_parser.cpp  test_ocean.cpp  test_parser.cpp  test_plastic.cpp  test_ripple.cpp  test_sphere.cpp  test_sponze.cpp  test_tracer.cpp
x64/Debug/: RayTracing.ilk
